# HelloWorldLLM

./: CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
data/: shakespeare.txt  xiyouji.txt
docs/: tutorial.cn.md  tutorial.md
src/: generate.py  main.py  main.ts  model.py  pyproject.toml  train.py
